--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,9 @@
     <title>Contacto</title>
 </head>
 <body>
+    <nav>
+        <a href="home.html">Inicio</a> | <a href="#"></a>
+    </nav>
     <h1>Contáctenos</h1>
 </body>
 </html>
