--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
     <title>Inicio</title>
 </head>
 <body>
+    <nav>
+        <a href="#">Inicio</a> | <a href="contacto.html"></a>
+    </nav>
     <h1>Inicio</h1>
 </body>
 </html>
