--- a/home.html
+++ b/home.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="#">Inicio</a> | <a href="contacto.html"></a>
-    </nav>
+        <a href="#">Inicio</a> | <a href="contacto.html">Contacto </a> | <a href="servicios.html">Servicios</a>
     <h1>Inicio</h1>
 </body>
 </html>
