--- a/servicios.html
+++ b/servicios.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="home.html">Inicio</a> | <a href="#">Servicios</a>
+        <a href="home.html">Inicio</a> | <a href="contacto.html">Contacto</a> | <a href="#">Servicios</a>
     </nav>
     <h1>Servicios</h1>
 </body>
