--- a/contacto.html
+++ b/contacto.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="home.html">Inicio</a> | <a href="#"></a>
-    </nav>
+        <a href="home.html">Inicio</a> | <a href="#">Contacto</a> | <a href="servicios.html">Servicios</a>
+    
+    
     <h1>Contáctenos</h1>
 </body>
 </html>
